# obsidian-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/: ignore  settings.json
.claude/hooks/: block_obsidian_direct.sh
.claude/rules/: project.md
.claude/skills/: README.md
.claude/skills/obsidian/: SKILL.md
.claude/skills/tech_notes/: SKILL.md
.claude/skills/telegram/: SKILL.md
specs/: SPEC_INDEX.md  TODO.md
specs/core/: mcp_server.narrative.md  mcp_server.technical.md  operations.narrative.md  operations.technical.md  validation.narrative.md  validation.technical.md  vault.narrative.md  vault.technical.md
src/obsidian_mcp/: __init__.py  errors.py  logger_builder.py  mcp_server.py  operations.py  validation.py  vault.py
tests/spec/core/: test_mcp_server_spec.py  test_operations_spec.py  test_validation_spec.py  test_vault_spec.py
